# TUBES-ISI-KEL-5

./: Cargo.toml  README.md  SensorStorage.abi  SensorStorage.sol  Sistem Monitoring Kelembaban dan Suhu Gudang Beras Berbasis Sensor IoT dan Teknologi Block-1.docx  deploy.js  index.html  main.rs  mainQT.py  package-lock.json  package.json  script.js  sensor_client.d  sensor_server_blockchain.d  solidity-files-cache.json  style.css
