[package]
name = "sensor_server_blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
ethers = { version = "2.0", features = ["abigen"] }
anyhow = "1.0"
